--- a/孕产保健全方案_PDF下载[136MB-百度云]戴耀华.html
+++ b/孕产保健全方案_PDF下载[136MB-百度云]戴耀华.html
@@ -1,4 +1,6 @@
-孕产保健全方案 PDF下载 戴耀华 百度云
+孕产保健全方案 PDF下载 戴耀华 百度云 下载
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#780203603
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#780203603
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#780203603
 <p>书名:孕产保健全方案</p><p>作者:戴耀华</p><p>页数:299</p><p>定价:¥32.8</p><p>出版社:中国妇女出版社</p><p>出版日期:2009-01-01</p><p>ISBN:9787802036031</p><p><h2>节选</h2></p>[<p>**章　孕前保健<br/>　　基本常识<br/>  　什么时候当妈妈好<br/>    生养一个健康漂亮的宝宝，是每位父母*大的希望。究竟什么时候是当妈妈的*佳年龄呢？国外专家认为，健康青年男女在18—30岁之间均为*佳生育年龄。我国专家学者认为，从优生优育的角度来讲，女性在23—29岁之间，男性在25—32岁之间生育*好。因为此阶段男女性器官发育完全成熟，睾丸、卵巢功能*活跃，加之其体格健壮，精力充沛旺盛，排出的精子和卵子质量*高，如果这个阶段怀孕，将会获得*佳胚胎。<br/>    然而，生育的理想年龄的选择，对于年轻夫妇来说，还往往受着诸如环境条件、伦理观念以及生理、心理等多方面因素的制约。当前，已有许多的年轻夫妇越来越重视主客观条件的综合考虑，以求得生育年龄的*佳“适宜值”。例如，有的年轻夫妇在事业上正处于双双攻关的关键时刻，就不妨把生育年龄稍稍推迟；又如有的夫妇一方或双方生殖系统的功能需要诊治，也不妨等完全康复后再生育……这些做法也不妨视为另一种意义的*佳生育年龄的选择方式。<br/>    目前，*佳生育年龄的择定，还应考虑到孩子出生后的优育条件是否具备等。许多年轻夫妇已有这样的远见卓识，他们当中有些人为了创造这一条件，宁肯在避免高龄初产（女性超过35岁）的前提下适当推迟育龄，以求得事业上的发展和生育上的从容。<br/>    从近几年的统计资料来看，越来越多的职业妇女要到30岁左右才结婚生育。这是因社会时代发展、人们传统意识改变和就业压力不断增加而造成的。在这个阶段，她们认为拥有稳定的工作和丰厚的经济收入，更有利于生养子女。……</p>]<p><h2>本书特色</h2></p>[<p>
 信赖权威专家·学习正确方法。<br/>　　著名专家悉心指导，荟萃孕产期保健知识精华。<br/>　　全面介绍孕产妇保健与新生儿养育知识。<br/>　　奉献给孕产妈妈和可爱宝宝。
