--- a/树,不在了_PDF下载[134MB-百度云]陈文茜著.html
+++ b/树,不在了_PDF下载[134MB-百度云]陈文茜著.html
@@ -1,4 +1,6 @@
-树,不在了 PDF下载 陈文茜著 百度云
+树,不在了 PDF下载 陈文茜著 百度云 下载
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751083432
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751083432
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751083432
 <p>书名:树,不在了</p><p>作者:陈文茜 著</p><p>页数:249</p><p>定价:¥36.0</p><p>出版社:九州出版社</p><p>出版日期:2015-03-01</p><p>ISBN:9787510834325</p><p><h2>本书特色</h2></p>[<p>
 　　世界格局不断变化，全球化快速崛起，金融海啸接踵而至，青年一代如何躲过这场经济危机？"中国"成了*常跳出来的关键词，"贫富差距"、"竞争力"、"教育改革"、"房价"，年轻人的情绪愈来愈重；从欧美到中东，从"自由贸易"到"关税壁垒"，从"政治联姻"到"石油大战"，有谁知道该如何回答这错综复杂的全球难题？<br/>　　亚洲地区资深媒体人陈文茜*新时评集，以小人物的故事看大政治，将年轻人的焦虑和愤怒，做了另一种温柔的开导，无关媒体与政治，只是站在更宽广的视野，为年轻人展现一个瞬息万变的世界。<br/>
