--- a/秀水泱泱映绿洲 秀洲名镇记_PDF下载[92MB-百度云]嘉兴市秀洲区社会科学界联合会,陆明,邵洪.html
+++ b/秀水泱泱映绿洲 秀洲名镇记_PDF下载[92MB-百度云]嘉兴市秀洲区社会科学界联合会,陆明,邵洪.html
@@ -1,4 +1,6 @@
-秀水泱泱映绿洲:秀洲名镇记 PDF下载 嘉兴市秀洲区社会科学界联合会,陆明,邵洪 百度云
+秀水泱泱映绿洲:秀洲名镇记 PDF下载 嘉兴市秀洲区社会科学界联合会,陆明,邵洪 百度云 下载
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754581731
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754581731
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754581731
 <p>书名:秀水泱泱映绿洲:秀洲名镇记</p><p>作者:嘉兴市秀洲区社会科学界联合会,陆明,邵洪</p><p>页数:0</p><p>定价:¥150.0</p><p>出版社:上海书店出版社</p><p>出版日期:2018-01-01</p><p>ISBN:9787545817317</p><p><h2>本书特色</h2></p>[<p>
 本书主要以有江南水乡特色的小镇为叙述对象。它们往往沿运河和其他重要河流、湖泊自然兴建而成，多为区域合并前曾繁华一时的人口密集区，具有相似之处，又各有特色。这些往昔珍珠般的江南小镇，有的以织布为业，有的以吃食出名，还有的蕴育了众多名门望族……但现在，一部分因地方发展或自然没落等原因，不复存在，也有一些正在衰败当中。本书作者通过细腻的视角和土生土长的感情还原了这些代表江南人文特色的水乡小镇风貌，书本内容涉及人物故事、景色风貌、民风民俗、水乡风物等，在深入挖掘历史底蕴的同时，融入了实地走访的观察和思考，突出了日常生活的情味。16开，彩印，平装。
