--- a/无间任务_PDF下载[122MB-百度云]李查德.html
+++ b/无间任务_PDF下载[122MB-百度云]李查德.html
@@ -1,3 +1,5 @@
-无间任务 PDF下载 李查德 百度云
+无间任务 PDF下载 李查德 百度云 下载
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751131324
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751131324
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751131324
 <p>书名:无间任务</p><p>作者:李查德</p><p>页数:430</p><p>定价:¥32.0</p><p>出版社:中国华侨出版社</p><p>出版日期:2011-05-01</p><p>ISBN:9787511313249</p><p><h2>内容简介</h2></p>[<p>除了杀戮，在这座山庄里没有更适合做的事！<br/>　　当李奇**次看见这座山庄，他知道自己将很难全身而退。此前，一名女子进入山庄后立刻下落不明，然后陆续有人为此丧命，所有的线索都指向一名神秘的幕后黑手！李奇再也不能坐视不管，因为他来到这里的目的不仅为了调查它的主人，也为了一桩十年前的恩怨必须了断……<br/> <br/>史蒂芬金说，“所有关于杰克李奇的冒险故事都帅呆了！”<br/>在李查德笔下，“独行侠”杰克李奇同时具备詹姆斯邦德的浪漫情怀、英武气质和杰森伯恩的冷静心态，他的果敢魄力以及强硬手段，经过《暗夜回声》中神秘命案找出真正的杀人凶手、《模拟刺客》中运用角色扮演“反间谍”技术彻查刺客身份、《无间任务》中进入海边豪宅卧底救出被困人员等一系列准间谍活动的历练，早已修成正果，可以列名于“著名间谍侦探”的文学史册！</p>]<p><h2>作者简介</h2></p>[<p>李查德（Lee Child）：非写作科班出身的他，用六块美元创造了奇迹！李查德1954年出生于英国，与《魔戒》的作者托尔金读同一所高中，拿同样的奖学金。从法学院毕业后，他进入电视台担任节目主持人和制作人，一干就是十八年。年届不惑之时他忽然失业，酷爱文学的他花六块美金买来纸笔，写下“浪子神探”杰克?李奇系列的第一部，结果一出版即登上英国《泰晤士报》畅销排行榜，更在美国勇夺推理小说最高殊荣之一安东尼奖桂冠。此后他以一年一本的速度推出续集，每每出版必定征服大西洋两岸各大畅销排行榜，更风靡了各个国家，“浪子神探”系列迄今已出版十五部，全球累计销量超过三千七百万册。</p>]
