--- a/遥感原理与应用_PDF下载[142MB-百度云]周廷刚.html
+++ b/遥感原理与应用_PDF下载[142MB-百度云]周廷刚.html
@@ -1,4 +1,6 @@
-遥感原理与应用 PDF下载 周廷刚 百度云
+遥感原理与应用 PDF下载 周廷刚 百度云 下载
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#703043003
+PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#703043003
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#703043003
 <p>书名:遥感原理与应用</p><p>作者:周廷刚</p><p>页数:230</p><p>定价:¥38.0</p><p>出版社:科学出版社</p><p>出版日期:2015-01-01</p><p>ISBN:9787030430038</p><p><h2>本书特色</h2></p>[<p>
 《遥感原理与应用》在介绍遥感基本概念与特点的基础上，从遥感物理基础、遥感平台、传感器、遥感影像及其特征等几方面讲述了遥感信息获取原理、主要遥感信息源的基本参数与信息特点，然后简要论述了遥感图像处理的主要方法以及遥感图像目视解译的基本内容与方法。针对数字图像处理发展的特点，对遥感数字图像计算机解译的原理、基本方法、精度评价等内容进行了阐述。同时，对遥感制图的基本内容、遥感的典型应用以及高光谱遥感进行了介绍。在《遥感原理与应用》的组织体系上，既介绍遥感的基本内容，又注重反映现代遥感技术的*新成果与发展动态，并结合社会发展与经济建设实际，反映遥感应用内容，力求结构合理、体系完整、内容丰富。
