--- a/宅记-二十年中国住房变迁之民间观察_PDF下载[39MB-百度云]罗德胤.html
+++ b/宅记-二十年中国住房变迁之民间观察_PDF下载[39MB-百度云]罗德胤.html
@@ -1,5 +1,4 @@
-宅记-二十年中国住房变迁之民间观察 PDF下载 罗德胤 百度云 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#756084314
+宅记-二十年中国住房变迁之民间观察 PDF下载 罗德胤 百度云 电子书 下载
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#756084314
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#756084314
 <p>书名:宅记-二十年中国住房变迁之民间观察</p><p>作者:罗德胤</p><p>页数:179页</p><p>定价:¥38.0</p><p>出版社:同济大学出版社</p><p>出版日期:2010-06-01</p><p>ISBN:9787560843148</p><p><h2>节选</h2></p>[<p>
