--- a/水稻植保员培训教材_PDF下载[157MB-百度云]张求东等编著.html
+++ b/水稻植保员培训教材_PDF下载[157MB-百度云]张求东等编著.html
@@ -1,5 +1,4 @@
-水稻植保员培训教材 PDF下载 张求东等编著 百度云 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#750825224
+水稻植保员培训教材 PDF下载 张求东等编著 百度云 电子书 下载
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#750825224
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#750825224
 <p>书名:水稻植保员培训教材</p><p>作者:张求东　等编著</p><p>页数:190</p><p>定价:¥10.0</p><p>出版社:金盾出版社</p><p>出版日期:2008-09-01</p><p>ISBN:9787508252247</p><p><h2>节选</h2></p>[<p>**章  水稻植保员的岗位<br/>    职责与素质要求<br/>    植物保护是对农业有害生物（包括农作物病虫草鼠和其他有害生物）的预防和控制，这是一项使农业减灾抗灾的社会性工作，不仅直接影响农业生产和国家粮食安全，而且还影响人们的生活秩序、人身健康和生态环境。在我国，植保工作一直备受重视，特别是在农产品出口面临的技术壁垒日益严峻的情况下，植保工作越来越规范和严格。实行农作物植保员从业职业资格认证就是其中重要一环。在山东省，出口企业开始推行“绿卡计划”，所有“绿卡”企业都必须有2人以上的植保员已基本是硬性规定。为了规范此项工作的开展，2004年劳动保障部与农业部联合颁布了农作物植保员的职业标准，对其职业概况、基本要求和工作要求做了明确的规定。<br/>　　一、水稻植保员的岗位职责<br/>    按照劳动保障部与农业部联合颁布的职业标准，农作物植保员是指从事预防和控制有害生物对农作物及其产品的危害，保护安全生产的人员。其工作环境是在常温下的室内和室外。农作物植保员从事的工作主要包括：对农作物病、虫、草、鼠害等进行测报并进行药剂防治和物理防治等综合防治，进行植物检疫，合理安全用药，防止和减少病毒与环境污染等。本职业共设五个等级，分别为：初级（国家职业资格五级）、中级（国家职业资格四级）、高级（国家职业资格三级）、技师（国家职业资格二级）和高级技师（国家职业资格一级）。<br/>　　……</p>]<p><h2>内容简介</h2></p>[<p>本书共8章，包括水稻病害的基础知识、水稻病虫害防治原理与方法、水稻病害诊断与防治、水田杂草及防治、水稻病虫害的田间调查和综合防治等内容。</p>]<p><h2>目录</h2></p>
