--- a/秀水泱泱映绿洲 秀洲名镇记_PDF下载[92MB-百度云]嘉兴市秀洲区社会科学界联合会,陆明,邵洪.html
+++ b/秀水泱泱映绿洲 秀洲名镇记_PDF下载[92MB-百度云]嘉兴市秀洲区社会科学界联合会,陆明,邵洪.html
@@ -1,5 +1,4 @@
-秀水泱泱映绿洲:秀洲名镇记 PDF下载 嘉兴市秀洲区社会科学界联合会,陆明,邵洪 百度云 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754581731
+秀水泱泱映绿洲:秀洲名镇记 PDF下载 嘉兴市秀洲区社会科学界联合会,陆明,邵洪 百度云 电子书 下载
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754581731
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754581731
 <p>书名:秀水泱泱映绿洲:秀洲名镇记</p><p>作者:嘉兴市秀洲区社会科学界联合会,陆明,邵洪</p><p>页数:0</p><p>定价:¥150.0</p><p>出版社:上海书店出版社</p><p>出版日期:2018-01-01</p><p>ISBN:9787545817317</p><p><h2>本书特色</h2></p>[<p>
