--- a/中国特色社会主义道路.理论.制度.文化 中国道路.马克思主义中国化卷_PDF下载[128MB-百度云]袁银传.html
+++ b/中国特色社会主义道路.理论.制度.文化 中国道路.马克思主义中国化卷_PDF下载[128MB-百度云]袁银传.html
@@ -1,5 +1,4 @@
-中国特色社会主义道路.理论.制度.文化/中国道路.马克思主义中国化卷 PDF下载 袁银传 百度云 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#752180411
+中国特色社会主义道路.理论.制度.文化/中国道路.马克思主义中国化卷 PDF下载 袁银传 百度云 电子书 下载
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#752180411
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#752180411
 <p>书名:中国特色社会主义道路.理论.制度.文化/中国道路.马克思主义中国化卷</p><p>作者:袁银传</p><p>页数:0</p><p>定价:¥68.0</p><p>出版社:经济科学出版社</p><p>出版日期:2018-02-01</p><p>ISBN:9787521804119</p><p><h2>本书特色</h2></p>[<p>
