--- a/潘老寨村调查 侗族_PDF下载[48MB-百度云]刘江荣，曾羽主编.html
+++ b/潘老寨村调查 侗族_PDF下载[48MB-百度云]刘江荣，曾羽主编.html
@@ -1,5 +1,4 @@
-潘老寨村调查:侗族 PDF下载 刘江荣，曾羽主编 百度云 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751363625
+潘老寨村调查:侗族 PDF下载 刘江荣，曾羽主编 百度云 电子书 下载
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751363625
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751363625
 <p>书名:潘老寨村调查:侗族</p><p>作者:刘江荣，曾羽主编</p><p>页数:250</p><p>定价:¥48.0</p><p>出版社:中国经济出版社</p><p>出版日期:2015-02-01</p><p>ISBN:9787513636254</p><p><h2>本书特色</h2></p>[<p>
