--- a/管理悖论_PDF下载[158MB-百度云]王树毅.html
+++ b/管理悖论_PDF下载[158MB-百度云]王树毅.html
@@ -1,5 +1,4 @@
-管理悖论 PDF下载 王树毅 百度云 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#710920723
+管理悖论 PDF下载 王树毅 百度云 电子书 下载
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#710920723
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#710920723
 <p>书名:管理悖论</p><p>作者:王树毅</p><p>页数:108</p><p>定价:¥30.0</p><p>出版社:中国农业出版社</p><p>出版日期:2015-07-01</p><p>ISBN:9787109207233</p><p><h2>本书特色</h2></p>[<p>
