--- a/遥感原理与应用_PDF下载[142MB-百度云]周廷刚.html
+++ b/遥感原理与应用_PDF下载[142MB-百度云]周廷刚.html
@@ -1,5 +1,4 @@
-遥感原理与应用 PDF下载 周廷刚 百度云 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#703043003
+遥感原理与应用 PDF下载 周廷刚 百度云 电子书 下载
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#703043003
 PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#703043003
 <p>书名:遥感原理与应用</p><p>作者:周廷刚</p><p>页数:230</p><p>定价:¥38.0</p><p>出版社:科学出版社</p><p>出版日期:2015-01-01</p><p>ISBN:9787030430038</p><p><h2>本书特色</h2></p>[<p>
