--- a/家畜繁殖员_PDF下载[118MB-百度云]韩芬霞.html
+++ b/家畜繁殖员_PDF下载[118MB-百度云]韩芬霞.html
@@ -1,6 +1,6 @@
-家畜繁殖员 PDF下载 韩芬霞 百度云 电子书 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#712225435
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#712225435
+家畜繁殖员 PDF下载 韩芬霞 百度云 电子书 下载 电子书下载
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#712225435
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#712225435
 <p>书名:家畜繁殖员</p><p>作者:韩芬霞</p><p>页数:213</p><p>定价:¥25.0</p><p>出版社:化学工业出版社</p><p>出版日期:2016-02-01</p><p>ISBN:9787122254351</p><p><h2>本书特色</h2></p>[<p>
 本书介绍了家畜繁殖员的岗位职责和基本要求、家畜繁殖的基础知识、母畜发情鉴定技术、妊娠诊断及助产技术、家畜繁殖管理技术、家畜繁殖新技术以及常见的繁殖疾病及防治等内容。全书内容详实、技术操作性强，可作为各类家畜养殖场、农村社会化服务组织和专业合作组织中从事家畜繁殖人员的参考书和培训教材，也可供家畜繁殖工岗前和在岗考核培训中自学使用。
                                         </p>]<p><h2>内容简介</h2></p>[<p>本书是家畜繁殖员的良好参考书，尤其适合作为他们的培训教材，全书介绍了家畜繁殖员应该掌握的各种技能；对于家畜繁殖员而言，本书堪为他们的工具书。</p>]<p><h2>目录</h2></p>
