--- a/成长永无止境-棋后谢军的完美征途_PDF下载[51MB-百度云]谢军.html
+++ b/成长永无止境-棋后谢军的完美征途_PDF下载[51MB-百度云]谢军.html
@@ -1,6 +1,6 @@
-成长永无止境-棋后谢军的完美征途 PDF下载 谢军 百度云 电子书 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754077597
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754077597
+成长永无止境-棋后谢军的完美征途 PDF下载 谢军 百度云 电子书 下载 电子书下载
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#754077597
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#754077597
 <p>书名:成长永无止境-棋后谢军的完美征途</p><p>作者:谢军</p><p>页数:323</p><p>定价:¥49.0</p><p>出版社:漓江出版社</p><p>出版日期:2015-09-01</p><p>ISBN:9787540775971</p><p><h2>相关资料</h2></p>[<p>
 	　　痴心不改的是棋艺要超越的是自己
 　　国际象棋棋后谢军自传
