--- a/李晶陈缨陈轲娜罗洋发电厂和变电换流站直流电源系统可靠性_PDF下载[33MB-百度云]李晶陈缨陈轲娜罗洋    .html
+++ b/李晶陈缨陈轲娜罗洋发电厂和变电换流站直流电源系统可靠性_PDF下载[33MB-百度云]李晶陈缨陈轲娜罗洋    .html
@@ -1,6 +1,6 @@
-李晶陈缨陈轲娜罗洋发电厂和变电换流站直流电源系统可靠性 PDF下载 李晶陈缨陈轲娜罗洋//// 百度云 电子书 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751981801
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751981801
+9787519818012 《李晶陈缨陈轲娜罗洋发电厂和变电换流站直流电源系统可靠性》 PDF下载 李晶陈缨陈轲娜罗洋//// 百度云 电子书 下载 电子书下载
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#751981801
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#751981801
 <p>书名:李晶陈缨陈轲娜罗洋发电厂和变电换流站直流电源系统可靠性</p><p>作者:李晶 陈缨 陈轲娜 罗洋////</p><p>页数:188</p><p>定价:¥98.0</p><p>出版社:中国电力出版社</p><p>出版日期:2019-01-01</p><p>ISBN:9787519818012</p><p><h2>本书特色</h2></p>[<p>
 电力系统是现代经济社会发展的重要能源基础。发电厂和变电（换流）站用交直流电源系统是影响电力系统发、输、变、配电安全可靠运行的关键环节之一。本书共分为8章，分别是概述、术语和缩略词、系统设计、主要设备、运行与维护、可靠性分析、新技术和新设备、标准化体系分析。并将相关IEC基础、设备、测试装置技术标准一览表放在附录中，方便使用。
                                         </p>]<p><h2>内容简介</h2></p>[<p>电力系统是现代经济社会发展的重要能源基础。发电厂和变电（换流）站用交直流电源系统是影响电力系统发、输、变、配电安全可靠运行的关键环节之一。本书共分为8章，分别是概述、术语和缩略词、系统设计、主要设备、运行与维护、可靠性分析、新技术和新设备、标准化体系分析。并将相关IEC基础、设备、测试装置技术标准一览表放在附录中，方便使用。</p>]<p><h2>作者简介</h2></p>[<p>李晶，国网四川省电力公司电力科学研究院，长期从事高压开关类设备和直流电源设备的技术监督、技术管理及科研、专业培训等工作，近年来主要在站用电低压系统方面开展标准化和系统运维与监测等方面的技术研究工作。CIGRE会员，电力行业气体绝缘金属封闭电器标准化技术委员会委员，电力行业高压开关和直流电源标准化技术委员会委员，国家电网有限公司“运检技术标准专业工作组（TC04）”委员，国家电网有限公司优秀专家人才，全国输配电技术协作网直流电源技术专业委员会委员。</p>]<p><h2>目录</h2></p>
