--- a/混沌修正函数投影同步_PDF下载[45MB-百度云]方洁.html
+++ b/混沌修正函数投影同步_PDF下载[45MB-百度云]方洁.html
@@ -1,4 +1,4 @@
-混沌修正函数投影同步 PDF下载 方洁 百度云 电子书 下载 电子书下载
+9787030601209 《混沌修正函数投影同步》 PDF下载 方洁 百度云 电子书 下载 电子书下载
 PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#703060120
 PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#703060120
 <p>书名:混沌修正函数投影同步</p><p>作者:方洁</p><p>页数:168</p><p>定价:¥69.0</p><p>出版社:科学出版社</p><p>出版日期:2019-01-01</p><p>ISBN:9787030601209</p><p><h2>本书特色</h2></p>[<p>
