--- a/潘老寨村调查 侗族_PDF下载[48MB-百度云]刘江荣，曾羽主编.html
+++ b/潘老寨村调查 侗族_PDF下载[48MB-百度云]刘江荣，曾羽主编.html
@@ -1,6 +1,6 @@
-潘老寨村调查:侗族 PDF下载 刘江荣，曾羽主编 百度云 电子书 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751363625
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#751363625
+9787513636254 《潘老寨村调查:侗族》 PDF下载 刘江荣，曾羽主编 百度云 电子书 下载 电子书下载
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#751363625
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#751363625
 <p>书名:潘老寨村调查:侗族</p><p>作者:刘江荣，曾羽主编</p><p>页数:250</p><p>定价:¥48.0</p><p>出版社:中国经济出版社</p><p>出版日期:2015-02-01</p><p>ISBN:9787513636254</p><p><h2>本书特色</h2></p>[<p>
 本书旨在通过村庄经济的的调查，系统梳理新中国成立以来，特别是改革开放以来潘老寨村的经济社会发展变迁，并说明民族文化在村庄经济社会发展中的重要地位及作用。
                                         </p>]<p><h2>内容简介</h2></p>[<p>NULL</p>]<p><h2>作者简介</h2></p>[<p>北京立金银行培训中心是一家在商业银行领域提供专业实务培训的金融服务机构，注册地在北京，由多名在国内外银行工作多年的专业人士组建。本中心主要从事商业银行实务专业技能培训，涉及领域包括：商业银行客户经理营销技能培训、公司银行信贷产品培训、授信业务风险管理培训、供应链融资业务培训、票据新产品及票据经营培训、私人银行授信业务培训、工程机械车按揭业务培训、个人房地产贷款业务培训、现金管理业务培训、理财业务培训、银团贷款实务培训、商业银行高管管理培训等.</p>]<p><h2>目录</h2></p>
