--- a/秀水泱泱映绿洲 秀洲名镇记_PDF下载[92MB-百度云]嘉兴市秀洲区社会科学界联合会,陆明,邵洪.html
+++ b/秀水泱泱映绿洲 秀洲名镇记_PDF下载[92MB-百度云]嘉兴市秀洲区社会科学界联合会,陆明,邵洪.html
@@ -1,6 +1,6 @@
-秀水泱泱映绿洲:秀洲名镇记 PDF下载 嘉兴市秀洲区社会科学界联合会,陆明,邵洪 百度云 电子书 下载
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754581731
-PDF电子书下载不求人，看这篇文章就够了→http://www.chendianrong.com/pdf#754581731
+9787545817317 《秀水泱泱映绿洲:秀洲名镇记》 PDF下载 嘉兴市秀洲区社会科学界联合会,陆明,邵洪 百度云 电子书 下载 电子书下载
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#754581731
+PDF电子书下载不求人，看这篇文章就够了→ http://www.chendianrong.com/pdf#754581731
 <p>书名:秀水泱泱映绿洲:秀洲名镇记</p><p>作者:嘉兴市秀洲区社会科学界联合会,陆明,邵洪</p><p>页数:0</p><p>定价:¥150.0</p><p>出版社:上海书店出版社</p><p>出版日期:2018-01-01</p><p>ISBN:9787545817317</p><p><h2>本书特色</h2></p>[<p>
 本书主要以有江南水乡特色的小镇为叙述对象。它们往往沿运河和其他重要河流、湖泊自然兴建而成，多为区域合并前曾繁华一时的人口密集区，具有相似之处，又各有特色。这些往昔珍珠般的江南小镇，有的以织布为业，有的以吃食出名，还有的蕴育了众多名门望族……但现在，一部分因地方发展或自然没落等原因，不复存在，也有一些正在衰败当中。本书作者通过细腻的视角和土生土长的感情还原了这些代表江南人文特色的水乡小镇风貌，书本内容涉及人物故事、景色风貌、民风民俗、水乡风物等，在深入挖掘历史底蕴的同时，融入了实地走访的观察和思考，突出了日常生活的情味。16开，彩印，平装。
                                         </p>]<p><h2>内容简介</h2></p>[<p>本书是一本介绍江南水乡小镇历史典故、人物、特色风情与风俗的散文著作。这些小镇往往沿运河和其他重要河流、湖泊自然兴建而成，多为区域合并前曾繁华一时的人口密集区，具有相似之处，又各有特色。它们有的以织布为业，有的以吃食为特色，还有的蕴育了众多有名望的家族，涌现了大量影响一时的风流人物。但现在，有部分小镇因为地方发展或自然没落等原因，现已不存在了，也有一些正在衰败当中。本书旨在还原这些代表江南人文特色的水乡小镇风貌，也期望能通过历史底蕴的挖掘，为现今较热门的特色小镇建设提供参考。共计十二篇，内容涉及小镇人物故事、景色风貌、民风民俗、水乡风物等，注重突出以“水”为代表的江南百姓的性格和生活情况。写法上注重历史叙述和和现今风貌相对比，融入了作者实地走访的观察和思考。</p>]<p><h2>作者简介</h2></p>[<p>中共嘉兴市秀洲区委宣传部：贯彻中央和省、市、区委关于宣传思想文化事业发展的指导方针，提出全区意识形态工作的意见，指导宣传文化系统的改革等。
